# origin

ALGOCPP-24/Lesson 1/Task 2/: Homework_4_1_2.cpp  Homework_4_1_2.sln  Homework_4_1_2.vcxproj  Homework_4_1_2.vcxproj.filters
ALGOCPP-24/Lesson 2/Task 1/: Homework_4_2_1.cpp  Homework_4_2_1.sln  Homework_4_2_1.vcxproj  Homework_4_2_1.vcxproj.filters
Coursework 1/: Coursework_1.cpp
Coursework 2/CMakeCoursework_2/: CMakeCoursework_2.cpp  CMakeLists.txt  VehicleDynamic.cpp  VehicleDynamic.h
Coursework 2/CMakeCoursework_2/VehicleLib/: AirVehicle.cpp  AirVehicle.h  CMakeLists.txt  GroundVehicle.cpp  GroundVehicle.h  VehicleDynamic.cpp  VehicleDynamic.h
Lesson 1/Task 1/: Homework_3_1_1.cpp
Lesson 1/Task 2/: Homework_3_1_2.cpp
Lesson 1/Task 3/: Homework_3_1_3.cpp
Lesson 10/Task 1/: HelloStatic.cpp  HelloStatic.h  HelloStaticLib.lib  HelloStaticLib.vcxproj  HelloStaticLib.vcxproj.filters  Homework_3_10_1.sln  Homework_3_10_1.vcxproj  Source.cpp
Lesson 10/Task 2/: ByeDynamic.cpp  ByeDynamic.h  ByeDynamicLib.lib  ByeDynamicLib.vcxproj  ByeDynamicLib.vcxproj.filters  Homework_3_10_2.cpp  Homework_3_10_2.sln  Homework_3_10_2.vcxproj  Homework_3_10_2.vcxproj.filters
Lesson 10/Task 3/: ByeDynamic.cpp  ByeDynamic.h  ByeDynamicLib.lib  CMakeBye.cpp  CMakeLists.txt
Lesson 10/Task 4_/: FigureDynamic.cpp  FigureDynamic.h  FigureDynamicLib.lib  FigureDynamicLib.sln  FigureDynamicLib.vcxproj  FigureDynamicLib.vcxproj.filters  Homework_3_11_4.cpp  Homework_3_11_4.vcxproj  Homework_3_11_4.vcxproj.filters
Lesson 10/Task 5_/: CMakeFigure.cpp  CMakeLists.txt  FigureDynamic.cpp  FigureDynamic.h  FigureDynamicLib.lib
Lesson 2/Task 1/: Homework_3_2_1.cpp
Lesson 2/Task 2/: Homework_3_2_2.cpp
Lesson 3/Task 1/: Homework_3_3_1.cpp  in.txt  out.txt
Lesson 3/Task 2/: Homework_3_3_2.cpp  in.txt  out.txt
Lesson 4/Task 1/: Homework_3_4_1.cpp
Lesson 4/Task 2/: Homework_3_4_2.cpp
Lesson 4/Task 3/: Homework_3_4_3.cpp
Lesson 5/Task 1/: Homework_3_5_1.cpp  calculator.cpp  calculator.h
Lesson 5/Task 2/: Homework_3_5_2.cpp  counter.cpp  counter.h
Lesson 5/Task 3/: Homework_3_5_3.cpp  equilateral_triangle.cpp  equilateral_triangle.h  isosceles_triangle.cpp  rectangle_figure.h  rhomb.cpp  rhomb.h  right_angled_triangle.cpp  square.cpp  triangle.cpp  triangle.h
Lesson 6/Task 1/: Homework_3_6_1.cpp
Lesson 6/Task 2/: Homework_3_6_2.cpp
Lesson 7/Task 1/: Homework_3_7_1.cpp  Homework_3_7_1.vcxproj
Lesson 7/Task 2/: Homework_3_7_2.cpp  Homework_3_7_2.vcxproj  equilateral_triangle.cpp  equilateral_triangle.h  figure_creation_error.cpp  figure_creation_error.h  isosceles_triangle.cpp  isosceles_triangle.h  parallelogram.cpp  parallelogram.h  quadrilateral.cpp  quadrilateral.h  rectangle_figure.cpp  rectangle_figure.h  rhomb.cpp  rhomb.h  right_angled_triangle.cpp  right_angled_triangle.h  square.cpp  square.h  triangle.cpp  triangle.h
Lesson 8/Task 1/: Homework_3_8_1.cpp  Homework_3_8_1.vcxproj
Lesson 8/Task 2/: Homework_3_8_2.cpp  Homework_3_8_2.vcxproj  fraction.cpp  fraction.h
Lesson 9/Task 1/: CMakeLists.txt  my_first_cmake_program.cpp
Lesson 9/Task 2/: CMakeLists.txt  Homework_3_9_2_CMakeProject.cpp
Lesson 9/Task 2/Figure/: isosceles_triangle.h  parallelogram.cpp  parallelogram.h  quadrilateral.cpp  quadrilateral.h  rectangle_figure.cpp  right_angled_triangle.h  square.h
(+35 files in other folders)
